# incubyte-assesment

./: .dockerignore  .gitignore  AGENT.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: fbbc42c3bac2_create_employees_table.py
backend/: .env.docker  .env.example  Dockerfile  __init__.py  config.py  database.py  logging.json  main.py  models.py  repositories.py  schemas.py  seed_employees.py  services.py
backend/routes/: employees.py  insights.py
backend/seed_data/: first_names.txt  last_names.txt
backend/tests/: test_app.py  test_config.py  test_database.py  test_employee_repository_integration.py  test_employee_routes.py  test_employee_service.py  test_insight_routes.py  test_models.py  test_salary_insight_repository_integration.py  test_salary_insight_service.py  test_schemas.py  test_seed_employees.py
docs/: README.md  prd.md
docs/backend/: application.md  database.md  seeding.md
docs/frontend/: application.md
frontend/: .cta.json  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  server.js  vite.config.ts
frontend/src/: main.tsx  query-client.ts  routeTree.gen.ts  router.tsx  styles.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: app-shell.tsx
frontend/src/routes/: __root.tsx  employees.tsx  index.tsx  insights.tsx
