[project]
name = "incubyte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
